implemented update news

--- a/news/templates/create_new.html
+++ b/news/templates/create_new.html
@@ -9,23 +9,10 @@
 			<header class="major">
 				<h1>Create new</h1>
 			</header>
-
-			<form method="post" action="#">
+			<form action="{% url 'create_new' %}" method="post">
 				{% csrf_token %}
-				<div class="row gtr-uniform">
-					<div class="col-6 col-12-xsmall">
-						<input type="text" name="demo-title" id="demo-title" value="" placeholder="Title" />
-					</div>
-					<div class="col-6 col-12-xsmall">
-						<input type="text" name="demo-description" id="demo-description" value="" placeholder="Description" />
-					</div>
-					<div class="col-12">
-						<select name="demo-category" id="demo-category">
-							<option value="">- Category -</option>
-						</select>
-					</div>
-				</div>
-				<a href="#"><button class="submit">Create</button></a>
+				{{ form.as_p }}
+				<button type="submit" class="button">Create</button>
 			</form>
 		</div>
 	</div>
