--- a/news/templates/new_detail.html
+++ b/news/templates/new_detail.html
@@ -10,13 +10,16 @@
 			<div class="inner">
 				<header class="major">
 					<h1>{{ new.title }}</h1>
+					<p>Publication date - {{ new.created_at }}</p>
 				</header>
 				{% if new.image %}
-					<span class="image main"><img src="{{ new.image.url }}" alt="{{ new.title }}" /></span>
+					<span class="image main"><img style="width: 1200px; height: 800px;" src="{{ new.image.url }}" alt="{{ new.title }}" /></span>
 				{% else %}
-					<span class="image main"><img src="{% static 'images/default.jpg' %}" alt="{{ new.title }}" /></span>
+					<span class="image main"><img style="width: 1200px; height: 800px;" src="{% static 'images/default.jpg' %}" alt="{{ new.title }}" /></span>
 				{% endif %}
 				<p>{{ new.description }}</p>
+				<a href="{% url 'update_new' new_id=new.id %}"><button class="button">Update</button></a>
+				<a href="{% url 'delete_new' %}"><button class="button">Delete</button></a>
 			</div>
 		</section>
 	</div>
