--- a/templates/base.html
+++ b/templates/base.html
@@ -7,29 +7,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
 		<noscript><link rel="stylesheet" href="{% static 'assets/css/noscript.css' %}" /></noscript>
-
 	</head>
 	<body class="is-preload">
-
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
 						<a href="/" class="logo">
-							<img src="{% static 'images/logo.png' %}" style="width: 80px; height: 40px;"/>
+							<img src="{% static 'images/girls_logo.png' %}" style="width: 80px; height: 40px;"/>
 						</a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
-				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="/">Home</a></li>
-							<li><a href="create_new/">Create</a></li>
+							<li><a href="girl_add/">Add</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Sing Up</a></li>
@@ -41,7 +34,6 @@
 
 				{% endblock %}
 
-				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
