--- a/news/templates/girl_update.html
+++ b/news/templates/girl_update.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Update new {% endblock %}
+{% block title %} Girl update {% endblock %}
 
 {% block content %}
 	<div id="main" class="alt">
 		<div class="inner">
 			<header class="major">
-				<h1>Update new</h1>
+				<h1>Girl update</h1>
 			</header>
 			<form method="post">
 				{% csrf_token %}
