--- a/news/templates/girls_filter.html
+++ b/news/templates/girls_filter.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Girls {% endblock %}
+{% block title %} Girls filter {% endblock %}
 
 {% block content %}
     <section id="banner" class="style2">
@@ -13,7 +13,7 @@
                 <h1>Girls</h1>
             </header>
             <div class="content">
-                <p>Famous girls of the world</p>
+                <p>Girls on category - {{ category }}</p>
             </div>
         </div>
     </section>
