--- a/news/templates/girl_add.html
+++ b/news/templates/girl_add.html
@@ -9,7 +9,7 @@
 			<header class="major">
 				<h1>Add new girl</h1>
 			</header>
-			<form action="{% url 'girl_add' %}" method="post">
+			<form action="{% url 'girl_add' %}" method="post" enctype="multipart/form-data">
 				{% csrf_token %}
 				{{ form.as_p }}
 				<button type="submit" class="button">Add</button>
